# sdfsdfsdfsdf

./: README.md  docker-compose.yml  postman.json
.github/workflows/: deploy.yml
Backend/: ADMIN_ACCESS.md  start.sh
Backend/Source/ContentService/: admin.py  models.py  serializers.py  urls.py  views.py
Backend/Source/Core/: admin.py  settings.py  urls.py
Backend/Source/UserFavourites/: admin.py  serializers.py  urls.py  views.py
Backend/Source/UserService/: admin.py  models.py  serializers.py  urls.py  views.py
Backend/Source/UserStoryService/: admin.py  apps.py  models.py  serializers.py  views.py
Frontend/ezoterika/: Dockerfile  FACEBOOK_OAUTH_SETUP.md  GOOGLE_OAUTH_SETUP.md  next.config.ts  package.json
Frontend/ezoterika/src/app/: globals.css  (+1 more)
IzoterikBackend/: .gitignore  README.md  docker-compose.yml
IzoterikBackend/.github/workflows/: deploy.yml
IzoterikBackend/Backend/: Dockerfile  pyproject.toml  requirements.txt
IzoterikBackend/Backend/Source/ContentService/: apps.py  serializers.py  urls.py
IzoterikBackend/Backend/Source/Core/: settings.py  urls.py
IzoterikBackend/Backend/Source/UserFavourites/: apps.py  models.py  urls.py  views.py
IzoterikBackend/Backend/Source/UserFavourites/migrations/: 0001_initial.py
IzoterikBackend/Backend/Source/UserService/: models.py  serializers.py  urls.py  views.py
IzoterikBackend/Backend/Source/UserService/migrations/: 0002_user_is_subscribed_user_notification_email_and_more.py  0004_user_email_verification_token_and_more.py
IzoterikBackend/Backend/Source/UserStoryService/: admin.py  urls.py
(+60 files in other folders)
